change in pull request

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             {{name}}
             <br />
             <ul>
-                <li data-ng-repeat="myname in names">{{myname}}</li>
+                <li data-ng-repeatss="myname in names">{{myname}}</li>
             </ul>
         </div>
 	</body>
